--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     container_name: laravel_app
     volumes:
       - .:/var/www
+      - /var/www/vendor
     ports:
       - "8000:8000"
     depends_on:
